flexbox links.html

--- a/estilo.css
+++ b/estilo.css
@@ -310,6 +310,22 @@ section#corpo img#glass5 {
   position: relative;
   top: 3px;
 }
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #808080;
+  justify-content: space-around;
+}
+
+.flex-container > li {
+  background-color: #f1f1f1;
+  width: 250px;
+  height: 100%;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+}
 
 * {
   cursor: url(lightsabergreen2.cur), default;
